--- a/styles/style.css
+++ b/styles/style.css
@@ -316,7 +316,7 @@ body {
   background-size: cover;
   height: 80vh;
   position: relative;
-  background-image: url(../images/black-women-planting.jpg);
+  background-image: url(../images/about1.jpg);
   display: flex;
   justify-content: center;
   text-align: center;
