--- a/styles/style.css
+++ b/styles/style.css
@@ -107,6 +107,8 @@ body {
 }
 .whole-page-container .hero-pic .contents .hero-con .join {
   margin-top: 2rem;
+  display: flex;
+  gap: 1rem;
 }
 .whole-page-container .hero-pic .contents .hero-con .join a {
   background-color: #191d88;
@@ -116,9 +118,15 @@ body {
   font-size: 20px;
   border-radius: 10px;
 }
+.whole-page-container .hero-pic .contents .hero-con .join a:hover {
+  color: white;
+}
 .whole-page-container .hero-pic .contents .hero-con .join a.inverted {
   background-color: #fff;
   color: #191d88;
+}
+.whole-page-container .hero-pic .contents .hero-con .join a.inverted:hover {
+  background-color: #ffc436;
 }
 .whole-page-container .about {
   padding: 5rem 0;
@@ -235,7 +243,7 @@ body {
   width: 33.3%;
   border-radius: 20px;
   padding: 2rem;
-  height: 300px;
+  min-height: 300px;
   top: 0;
   box-shadow: -5px 15px 15px black;
 }
@@ -426,7 +434,7 @@ body {
   padding: 3rem 1rem;
 }
 .whole-page-container .donate .donate-form-container .contact-form form .input input, .whole-page-container .donate .donate-form-container .contact-form form .input textarea {
-  width: 70%;
+  width: 100%;
   border: none;
   background-color: white;
   border-radius: 20px;
@@ -469,6 +477,7 @@ body {
 }
 .whole-page-container .footer .footer-container .footer-links {
   display: flex;
+  flex-wrap: wrap;
   margin-top: 23px;
   gap: 23px;
 }
@@ -605,7 +614,7 @@ body {
   }
   .whole-page-container .hero-pic .contents .hero-con {
     margin-top: 250px;
-    padding: 0 2rem;
+    padding: 0 1rem;
   }
   .whole-page-container .hero-pic .contents .hero-con #hero-head {
     font-size: 15px;
@@ -615,6 +624,10 @@ body {
   }
   .whole-page-container .hero-pic .contents .hero-con .donation-text {
     font-size: 20px;
+  }
+  .whole-page-container .hero-pic .contents .hero-con .join {
+    flex-direction: column;
+    width: fit-content;
   }
   .whole-page-container .hero-pic .contents .hero-con .join a {
     font-size: 15px;
@@ -632,7 +645,7 @@ body {
     margin: auto;
   }
   .whole-page-container .about .founder {
-    width: 60vw;
+    width: 100vw;
   }
   .whole-page-container .about .info-div {
     display: flex;
@@ -677,6 +690,7 @@ body {
   }
   .whole-page-container .principles .volunteer {
     width: 90%;
+    padding: 2rem;
   }
   .whole-page-container .donate {
     padding: 2rem 2rem;
@@ -687,6 +701,9 @@ body {
   .whole-page-container .donate #contact h1 {
     font-size: 40px;
     text-align: center;
+  }
+  .whole-page-container .donate #contact p {
+    font-size: 15px;
   }
   .whole-page-container .donate .donate-form-container {
     margin: 2rem 0;
