--- a/styles/style.scss
+++ b/styles/style.scss
@@ -117,6 +117,9 @@ body {
         }
         .join {
           margin-top: 2rem;
+          // display: flex;
+          display: flex;
+          gap: 1rem;
 
           a {
             background-color: #191d88;
@@ -125,10 +128,18 @@ body {
             padding: 1rem 2rem;
             font-size: 20px;
             border-radius: 10px;
+
+            &:hover {
+              color: white;
+            }
           }
           a.inverted {
             background-color: #fff;
-            color: #191d88
+            color: #191d88;
+
+            &:hover {
+              background-color: #ffc436;
+            }
           }
         }
       }
@@ -265,7 +276,7 @@ body {
             width: 33.3%;
             border-radius: 20px;
             padding: 2rem;
-            height: 300px;
+            min-height: 300px;
             // min-height: fit-content;
             top: 0;
             box-shadow: -5px 15px 15px black;
@@ -504,7 +515,7 @@ body {
           .input {
             input, textarea
              {
-              width: 70%;
+              width: 100%;
               border: none;
               background-color: white;
               border-radius: 20px;
@@ -563,7 +574,7 @@ body {
 
       .footer-links {
         display: flex;
-
+        flex-wrap: wrap;
         margin-top: 23px;
         gap: 23px;
         div {
@@ -740,7 +751,7 @@ body {
         }
         .hero-con {
           margin-top: 250px;
-          padding: 0 2rem;
+          padding: 0 1rem;
 
           #hero-head {
             font-size: 15px;
@@ -752,6 +763,8 @@ body {
             font-size: 20px;
           }
           .join {
+            flex-direction: column;
+            width: fit-content;
             a {
               font-size: 15px;
             }
@@ -785,7 +798,7 @@ body {
         }
       }
       .founder {
-        width: 60vw;
+        width: 100vw;
       }
       .info-div {
         display: flex;
@@ -847,9 +860,8 @@ body {
 
       .volunteer {
         width: 90%;
-
-        .vln-btn {
-        }
+        padding: 2rem;
+        
       }
     }
     .donate {
@@ -859,6 +871,9 @@ body {
         h1 {
           font-size: 40px;
           text-align: center;
+        }
+        p {
+          font-size: 15px;
         }
       }
 
